<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="home">Main</string>

    <!--Production-->
 <!--   <string name="app_name">BMB (B4.1.9)</string>
    <string name="app_version"></string>
    <string name="appcode_version">C4.1B4.1.8.9</string>
    <string name="app_fileversion">VP4.1.9.apk</string>-->
       <string name="app_name">BMB (B4.2.1)</string>
       <string name="app_version"></string>
       <string name="appcode_version">C4.1B4.2.0.1</string>
       <string name="app_fileversion">VP4.2.1.apk</string>
    <!--Testing-->
   <!--<string name="app_name">BMB (B4.0.1)</string>
    <string name="app_version">B4.0.1</string>
    <string name="appcode_version">C4.0.1</string>
    <string name="app_fileversion">VP4.0.1.apk</string>-->

    <string name="consumer_details">Consumer Details</string>
    <string name="billing_by_account_no">Billing By Account Number</string>
    <string name="meter_status">Meter Status</string>
    <string name="billing">Billing</string>
    <string name="bill_calculation">Bill Processing</string>
    <string name="remarks">Remarks</string>
    <string name="print_bill">Print Bill</string>
    <string name="bt_meter">Meter List</string>
    <string-array name="sub_div"></string-array>
    <string name="title_activity_act_demo">ActDemo</string>
    <string name="action_settings">Settings</string>
    <string name="available_Meters">List of Available Meters</string>
    <string name="data_unavailable">Presently No Data Available.</string>
    <string name="noDevice"> No Device Installed for this connection  </string>
    <string name="nodataAvailable"> Presently no data available </string>
    <string name="nodeviceavailable">No meter is available in the range, please scan again</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="disconnect">Disconnect</string>
    <string name="connecting">Connecting ...</string>
    <string name="connect">Connect</string>
    <string name="read_date">READ DATA</string>
    <string name="setting_title">Server Settings</string>
    <string name="no_meter_found">No Meter Found</string>
    <string name="sync_to_server">SYNC TO SERVER</string>
    <string name="ip">Enter IP address</string>
    <string name="port">Enter port number</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="alert">Alert...</string>
    <string name="hint_name">Enter AC Meter Reading:</string>
    <string name="hint_name_dc">Enter DC Meter Reading:</string>
    <string name="err_msg_name">Enter valid meter reading</string>
    <string-array name="PrinterType">
        <item>Analogic Thermal</item>
        <!--<item>Analogic Thermal-Hin</item>-->
        <item>Epson Thermal</item>
        <item>Epson Thermal-Hin</item>
        <item>TVS-ENGLISH</item>
        <item>TVS-HINDI</item>
        <!--<item>Mini Portable Thermal</item>-->
       <!-- <item>Zebra Thermal</item>-->
    </string-array>
    <string-array name="PrintLang">
        <item>English</item>
        <item>Hindi</item>
    </string-array>
    <string-array name="Abnormality">
        <item>All ok</item>
        <item>Meter on height</item>
        <item>Dirty Meter</item>
        <item>Broken Meter/Seal</item>
        <item>No Meter</item>
        <item>Meter bypass</item>
        <item>Theft</item>
        <item>Electro-Mechanical</item>
        <item>Mtr. No Mismatch</item>
        <item>Category Mismatch</item>
        <item>Consumer Not Traceable</item>
        <item>Reading Refused by consumer</item>
        <item>Suspected Faulty</item>
        <item>Mtr. Digit Mismatch</item>
        <item>Others</item>
    </string-array>
    <string name="title_activity_actv_launch_app">Application Launch</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_pole_mobile">Mobile-Pole Updation</string>
    <string name="title_activity_meter_nbr_input">MeterNbrInput</string>
    <string name="title_activity_activity_sync_data">ActivitySyncData</string>
    <string name="title_activity_intermediate">In Process</string>
    <string name="title_activity_missing_consumers">Missing Consumers</string>
    <string name="title_activity_inter_dup">Duplicate Billing</string>
    <string name="title_activity_seq_sync">Synchronize</string>
    <string name="title_activity_sync_mob_pole">Synchronize Mobile-Pole</string>
    <string name="title_activity_abnormality_">Abnormality</string>
    <string-array name="reasonForNextSequence">
        <item>Disconnected</item>
        <item>Not in MRU</item>
        <item>Property Demolished</item>
    </string-array>
</resources>