<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DCDCDC"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/headerfortable1"
        style="?android:attr/buttonBarStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="#ff53adcb"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/textview"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_weight="0.43"
            android:gravity="center"
            android:text="@string/available_Meters"
            android:textColor="#000000"

            android:textSize="15dp"
            android:textStyle="italic|bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_scan_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="#FFEBF5F9"

        >

        <ListView
            android:id="@+id/scanndevicelist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">

        </ListView>

        <TextView
            android:id="@+id/nodata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/data_unavailable"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="italic"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/availableMeterMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/nodeviceavailable" />

    </RelativeLayout>

    <!--
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:foregroundGravity="bottom"
        android:layout_margin="@dimen/fab_margin"
        android:background="#FF0099CC"
        android:src="@drawable/demo"
        app:backgroundTint="#FF0099CC" />

    -->

    <!--<android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FF0099CC"
        android:src="@drawable/demo"
        app:backgroundTint="#FF0099CC" />-->


</LinearLayout>