<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_centerVertical="true">

    <RelativeLayout
        android:id="@+id/rlmain"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"

        android:layout_centerVertical="true"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="#FFDAEFF5">

        <RelativeLayout
            android:id="@+id/Lilayout1"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:background="#FF0099CC">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="40dip"
                android:layout_height="40dip"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="5dip"
                android:layout_toStartOf="@+id/title"
                android:src="@drawable/setting" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/imageView"
                android:layout_centerHorizontal="true"
                android:background="#FF0099CC"
                android:gravity="center"
                android:text="@string/setting_title"
                android:textColor="#ffffff"
                android:textSize="20dp"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/firstlinear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Lilayout1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ipaddresslabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/ip"
                android:textColor="#000000"
                android:textSize="15dp"
                android:textStyle="bold"></TextView>

            <EditText
                android:id="@+id/ipaddress"
                android:layout_width="343dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:inputType="textCapSentences"
                android:textColor="#000000"

                android:textSize="15dp"></EditText>


            <TextView
                android:id="@+id/portlabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/port"
                android:textColor="#000000"
                android:textSize="15dp"
                android:textStyle="bold"></TextView>

            <EditText
                android:id="@+id/port"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:digits="0123456789"
                android:inputType="numberDecimal"
                android:textColor="#000000"
                android:textSize="15dp"></EditText>

        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/firstlinear"
            android:orientation="horizontal"
            android:paddingBottom="6.0dip"
            android:paddingLeft="4.0dip"
            android:paddingRight="4.0dip"
            android:paddingTop="5.0dip">

            <Button
                android:id="@+id/cancel"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1.0"
                android:background="@drawable/buttonstyle"
                android:text="@string/cancel"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/ok"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1.0"
                android:background="@drawable/buttonstyle"
                android:text="@string/ok"
                android:textColor="#FFFFFF" />

        </LinearLayout>


    </RelativeLayout>

    <!--
                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="Are you Sure?"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#ffffff"
                    android:textSize="13dip" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/relativeLayout1"
                android:layout_alignRight="@+id/relativeLayout1"
                android:layout_below="@+id/relativeLayout1"
                android:layout_marginTop="5dip" >
            </RelativeLayout>

            <ProgressBar
                android:id="@+id/process"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="3dip"
                android:layout_marginTop="3dip" />

            <RelativeLayout
                android:id="@+id/relativeLayout3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/relativeLayout2"
                android:layout_below="@+id/relativeLayout2"
                android:layout_toLeftOf="@+id/process" >

                <TextView
                    android:id="@+id/message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="Medium Text"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#ffffff"
                    android:textSize="13dip"/>

            </RelativeLayout>

            <Button
                android:id="@+id/next_button"
                android:layout_width="90dip"
                android:layout_height="35dip"
                android:layout_alignParentBottom="true"

                android:layout_marginBottom="5dp"
                android:textSize="10dp"

                android:layout_alignRight="@+id/relativeLayout3"
                android:text="Okay" />

            <Button
                android:id="@+id/button2"
                android:text="Cancel"

                android:layout_width="90dip"
                android:layout_height="35dip"
                android:layout_marginBottom="5dp"

                android:layout_marginRight="7dp"
                android:textSize="10dp"
                android:layout_alignParentBottom="true"
                android:layout_toLeftOf="@+id/next_button"
                />-->

</RelativeLayout>
